syntax = "proto3";

option java_package = "org.pipelineframework.search.grpc";


message CrawlRequest {
  string docId = 1;
  string sourceUrl = 2;
}

message RawDocument {
  string docId = 3;
  string sourceUrl = 4;
  string rawContent = 5;
  string fetchedAt = 6;
}

service ProcessCrawlSourceService {
  rpc remoteProcess(CrawlRequest) returns (RawDocument);
}

service ObservePersistenceRawDocumentSideEffectService {
  rpc remoteProcess(RawDocument) returns (RawDocument);
}

service ObserveCacheInvalidateCrawlRequestSideEffectService {
  rpc remoteProcess(CrawlRequest) returns (CrawlRequest);
}

service ObserveCacheInvalidateRawDocumentSideEffectService {
  rpc remoteProcess(RawDocument) returns (RawDocument);
}

service ObserveCacheInvalidateAllCrawlRequestSideEffectService {
  rpc remoteProcess(CrawlRequest) returns (CrawlRequest);
}

service ObserveCacheInvalidateAllRawDocumentSideEffectService {
  rpc remoteProcess(RawDocument) returns (RawDocument);
}
